Remove special case for set of 2 elems, maps of 2 elems